Thu Jun  3 17:28:49 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/tests/NodeApplicationTest/NodeApp_test_client.cpp:
	  Formatted the output a bit to make the message more reflective.

	* DnC/ciao/CCM_Core.mpc:
	  Moved the callback implementation from deployment servant to
	  stub.

Thu Jun  3 16:25:58 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/DnC_Dump.cpp:

	Added the dump code for ComponentPropertyDescription::type (CORBA::TypeCode).

Thu Jun  3 16:15:41 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DnC/NodeApplication/NodeApplication.mpc:
        * DnC/ciao/CCM_Core.mpc:

          Some tweaks to the MPC files.

Thu Jun  3 16:10:11 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp:

          Forgot to remove generated members of the servant class that
          have been moved to the base classes.

Thu Jun  3 16:07:35 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/DnC_Dump.h:
	* DnC/Config_Handlers/DnC_Dump.cpp:

	Added the methods required to dump referenced values
	correctly. Dump functions are chaged accordingly.

Thu Jun  3 14:19:31 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/ExecutionManager/ExecutionManager.mpc:
        * DnC/ExecutionManager/Execution_Manager.cpp:

          Removed CIAO::Server_init () method calls from the server, as
          this server does not need capabilities for explicitly processing
          valuetypes. These calls are already present in NodeApplication
          entity.

Thu Jun  3 12:35:51 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servant_Impl_T.cpp:
        * ciao/Servant_Impl_T.h:
        * ciao/Servant_Impl_Base.cpp:
        * ciao/Servant_Impl_Base.h:

          New files added to CIAO_Server. A template base class is now
          inserted into the inheritance hierarchy between the skeleton
          class of the component's equivalent interface and the